--- a/nootboke.ipynb
+++ b/nootboke.ipynb
@@ -1579,11 +1579,188 @@
    "id": "6360562d",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c5659707",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2777d938",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Path(\"data\") / \"raw\"/ \"orders.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8b3e5a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('data/raw/orders.csv')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a5007647",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csV=pd.read_csv(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "3ef28acc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>created_at</th>\n",
+       "      <th>status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-12-01T10:05:00Z</td>\n",
+       "      <td>Paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A0002</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2025-12-01T11:10:00Z</td>\n",
+       "      <td>paid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A0003</td>\n",
+       "      <td>3</td>\n",
+       "      <td>not_a_number</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-12-02T09:00:00Z</td>\n",
+       "      <td>Refund</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A0004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2025-12-03T14:30:00Z</td>\n",
+       "      <td>PAID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A0005</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>not_a_date</td>\n",
+       "      <td>paid</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  order_id  user_id        amount  quantity            created_at  status\n",
+       "0    A0001        1         12.50       1.0  2025-12-01T10:05:00Z    Paid\n",
+       "1    A0002        2          8.00       2.0  2025-12-01T11:10:00Z    paid\n",
+       "2    A0003        3  not_a_number       1.0  2025-12-02T09:00:00Z  Refund\n",
+       "3    A0004        1         25.00       NaN  2025-12-03T14:30:00Z    PAID\n",
+       "4    A0005        4        100.00       1.0            not_a_date    paid"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "955499ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
